--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # CMAKE version of Ubuntu 16.04 is 3.5.
 cmake_minimum_required(VERSION 3.5)
-project(test)
+project(KWidgetASR)
 
 set(LINKLIBS)
 set(COMPILE_OPTION)
